# tempwatch

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: health.py  preserved_watch.py  printers.py  sessions.py
backend/app/core/: config.py
backend/app/db/: __init__.py  init_db.py  models.py  session.py
backend/app/integrations/: moonraker.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: thermal.py
backend/app/services/: background_watch.py  recording_loop.py  session_lifecycle.py  smart_watch.py  watch_preservation.py
backend/tempwatch_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_background_watch_retention.py  test_smart_watch.py  test_watch_preservation.py
docs/: ROADMAP.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/docker/: nginx.conf
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: TemperatureChart.tsx
frontend/src/lib/: api.ts  time.ts
frontend/src/pages/: DashboardPage.tsx  PreservedCapturesPage.tsx  PrintersPage.tsx  SavedSessionsPage.tsx  SessionsPage.tsx  WatchPage.tsx
frontend/src/types/: thermal.ts
